...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/random-podcast-title" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:scrollbars="vertical"
        android:text="@string/feeling_lucky_find_itunes"
...
        android:background="@color/circular_button_normal"
        android:contentDescription="@string/feeling_lucky_podcast_thumbnail"
        android:scaleType="centerCrop"
        android:src="@android:drawable/star_big_on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lucky_title"
        tools:srcCompat="@tools:sample/avatars[14]" />

    <TextView
        android:id="@+id/random-podcast-title"
        android:layout_width="336dp"
        android:layout_height="38dp"
...
