...
            tools:layout_editor_absoluteX="0dp">

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/luckyBtn"
            android:layout_width="161dp"
            android:layout_height="48dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/ic_launcher_background"
...
